changes the Biography section of the profile page by adding Tabs to it and creating 3 new components: ProfileIntro, ProfileBio, and ProfileInfo. Made corresponding changes to global css to make the changes work. Also changed the way ProfileAbout looks by adding the three components and an edit button to the component. Edited the user model by adding 'employment'. Created a skeleton of the ProfileDetailsForm and the corresponding routes and indexController method.

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -18,3 +18,9 @@ a {
 .css-19kzrtu {
   background-color: #f1f2f6;
 }
+
+#about-tabpanel-0 > .css-19kzrtu,
+#about-tabpanel-1 > .css-19kzrtu,
+#about-tabpanel-2 > .css-19kzrtu {
+  background-color: white;
+}
