Updated styling for giphys on hover

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -30,3 +30,17 @@ a {
 iframe {
   width: 100%;
 }
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  color: white;
+  padding: 1rem;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+}
